# signal-apt

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  DESIGN.md  README.md  pyproject.toml  render.yaml
.claude/: launch.json
docs/: ARCHITECTURE.md
scripts/: install-schedule.sh  uninstall-schedule.sh
src/realty_signal/: advisor.py  ai_report.py  api.py  auction.py  auth.py  backup.py  cli.py  config.py  db.py  digest.py  entities.py  legal.py  personal_layer.py  store.py
src/realty_signal/brain/: __init__.py  alert_track.py  alerts.py  calibrate.py  config_store.py  memory.py  outcomes.py  ranking.py  snapshots.py
src/realty_signal/ingest/: agents.py  applyhome.py  complex.py  gongsi.py  imjang.py  kb_weekly.py  locality.py  news.py  pipeline.py  presale.py  redevelopment.py  volume.py
src/realty_signal/routes/: __init__.py  advisor.py  alerts.py  auction.py  auth.py  brain.py  complex.py  deps.py  explore.py  geo.py  market.py  personal.py  redev.py  strategy.py
src/realty_signal/services/: __init__.py  complex_signal.py  market_data.py
src/realty_signal/signals/: cycle.py  engine.py  history.py  strength.py  timing.py
src/realty_signal/web/: index.html
tests/: test_alert_track.py  test_auction.py  test_auth_legal.py  test_brain.py  test_cohort_signup.py  test_complex_metrics.py  test_digest_events.py  test_engine.py  test_memory_ranking.py  test_nbhd_v2.py  test_nick_profile.py  test_personal_layer.py  test_snapshots.py  test_strength.py  test_timing.py
